--- a/CryptographyAPI/CryptographyAPI.vcxproj.filters
+++ b/CryptographyAPI/CryptographyAPI.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Decrypt.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Account.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
